# Utilities

./: LICENSE  README.md  environment.yml  install.sh  pyproject.toml  requirements.txt
configs/: grounding_dino_evaluation.yaml  rtdetr_r101vd_evaluation.yaml  rtdetr_r50vd_evaluation.yaml
configs/examples/: advanced_config.yaml  basic_config.yaml
docs/: getting-started.md  index.md
docs/guides/: basic-usage.md  dinotxt-guide.md  rest-api-server.md  robotics-evaluation.md  server-usage.md  using-scripts.md  video-processing.md
scripts/: __init__.py  client_model.py  concatenate_videos.py  evaluate.py  server_model.py  ycb_downloader.py  ycb_generate_point_cloud.py
vision_utils/: __init__.py
vision_utils/data/: loaders.py  padding.py  parsers.py  structures.py
vision_utils/evaluation/: base_evaluator.py  classification_evaluator.py  evaluator.py  segmentation_evaluator.py
vision_utils/image_processing/: esrgan_upscale.py  stable_diffusion_upscale.py  utils.py
vision_utils/io/: config.py  results.py
vision_utils/metrics/: advanced.py  basic.py  gpu_memory.py  timing.py
vision_utils/models/: base.py  dinotxt.py  factory.py  inference.py  object_detection.py  yolo.py  zero_shot.py
vision_utils/robotics/: rotations.py  structures.py  transforms.py
vision_utils/server/: base.py  client.py  server.py
vision_utils/utils/: bbox.py  matching.py
vision_utils/video_processing/: concatenate.py
vision_utils/visualization/: annotator.py  plotter.py  video_writer.py
vision_utils/ycb/: downloader.py  point_cloud_generator.py
