[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "utilities"
version = "0.1.0"
description = "A comprehensive library for object detection and computer vision tasks"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Arqum Uddin"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

# Core dependencies (minimal - for data loading and basic bbox operations)
dependencies = [
    "numpy==1.26.4",
    "opencv-python==4.9.0.80",
    "pillow==12.0.0",
    "pyyaml==6.0.3",
    "tqdm==4.65.2",
]

[project.optional-dependencies]
# Model inference - PyTorch and transformers
models = [
    "torch==2.9.0",
    "torchvision==0.24.0",
    "torchaudio==2.9.0",
    "transformers==4.57.1",
    "ultralytics==8.3.221",
    "huggingface_hub==0.36.0",
]

# Computer vision utilities
cv = [
    "supervision==0.19.0",
    "scipy==1.15.3",
    "pycocotools==2.0.10",
]

# Metrics and evaluation
metrics = [
    "scikit-learn==1.7.2",
    "scikit-image==0.25.2",
]

# Visualization and plotting
visualization = [
    "plotly==6.3.1",
    "kaleido==1.1.0",
    "matplotlib==3.10.7",
    "seaborn==0.13.2",
]

# Video processing
video = [
    "ffmpeg-python==0.2.0",
]

# Data processing
data = [
    "pandas==2.3.3",
]

# Image enhancement (requires BasicSR)
enhancement = [
    "realesrgan==0.3.0",
    "gfpgan==1.3.8",
    "facexlib==0.3.0",
]

# REST API server
server = [
    "flask==3.1.2",
    "requests==2.28.2",
]

# All dependencies
all = [
    "utilities[models,cv,metrics,visualization,video,data,enhancement,server]",
]

[project.scripts]
vision-eval = "scripts.evaluate:main"

[project.urls]
Repository = "https://github.com/ArqumUddin/Utilities"
"Bug Tracker" = "https://github.com/ArqumUddin/Utilities/issues"

[tool.setuptools]
packages = ["vision_utils", "scripts"]

[tool.setuptools.package-data]
vision_utils = ["py.typed"]
